--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
           <form>
             <p>Título:</p>
-            <input type="text" id="titulo" autofocus />
+            <input type="text" id="titulo"/>
   
             <p>Descrição:</p>
             <input type="text" id="descricao" />
